this is the commit after implementing the the student and professorController is done

--- a/src/main/resources/templates/professor/show.html
+++ b/src/main/resources/templates/professor/show.html
@@ -28,12 +28,21 @@
     </li>
 </ul>
 </div>
+<div>
 <ul>Date Of Birth:
     <li>
         <p th:text=${professor.dob}>B </p>
     </li>
 </ul>
 </div>
+<div>
+    <ul>Address:
+        <li>
+            <p th:text=${professor.address}>B </p>
+        </li>
+    </ul>
+</div>
+<div>
 
     <ul>Faculty:
             <li>
