--- a/src/main/resources/templates/student/show.html
+++ b/src/main/resources/templates/student/show.html
@@ -44,14 +44,14 @@
 <div>
     <ul>Course Length:
         <li>
-            <p th:text=${student.courseLength}> </p>
+            <p th:text=${student.courseLength}>4 </p>
         </li>
     </ul>
 </div>
 <div>
     <ul>Year:
         <li>
-            <p th:text=${student.year}> </p>
+            <p th:text=${student.year}> 1</p>
         </li>
     </ul>
 </div>
