--- a/src/main/resources/templates/professor/professorform.html
+++ b/src/main/resources/templates/professor/professorform.html
@@ -29,6 +29,11 @@
         </div>
 
     <div>
+        <p>Address: <input type="text" th:field="*{address}" /></p>
+    </div>
+
+
+    <div>
         <p>Faculty: <input type="text" th:field="*{faculty}" /></p>
     </div>
 
